--- a/package.json
+++ b/package.json
@@ -2,22 +2,20 @@
 	"name": "bedrocktools",
 	"author": "xKingDark",
 	"version": "0.1.0-beta",
-	"description": "",
+	"description": "Bedrock Tools is an app created to help Minecraft: Bedrock Edition players make add-ons.",
 	"license": "MIT",
 	"scripts": {
-		"start": "electron ./index.js --disable-gpu",
+		"start": "electron --trace-deprication ./index.js",
+		"start-no-gpu": "electron ./index.js --disable-gpu",
 		"build": "electron-builder",
 		"build_appx": "electron-builder --win appx"
 	},
 	"dependencies": {
 		"@electron/remote": "^2.0.9",
-		"@minescope/mineping": "^1.0.4",
 		"@sfirew/mc-motd-parser": "^1.1.0",
-		"bedrock-protocol": "^3.25.0",
 		"bytebuffer": "^5.0.1",
 		"express": "^4.18.2",
-		"prismarine-nbt": "^2.2.1",
-		"ws": "^8.12.0"
+		"prismarine-nbt": "^2.2.1"
 	},
 	"devDependencies": {
 		"electron": "^23.1.3",
@@ -25,10 +23,10 @@
 	},
 	"build": {
 		"appId": "com.xkingdark.bedrocktools",
-		"productName": "Bedrock Tools",
+		"productName": "Bedrock Tools (Beta)",
 		"icon": "build/icon.ico",
 		"appx": {
-			"displayName": "Bedrock Tools",
+			"displayName": "Bedrock Tools (Beta)",
 			"applicationId": "com.xkingdark.bedrocktools",
 			"publisherDisplayName": "xKingDark"
 		},
