--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "bedrocktools",
 	"author": "xKingDark",
-	"version": "0.1.0-beta",
+	"version": "0.1.1-beta",
 	"description": "Bedrock Tools is an app created to help Minecraft: Bedrock Edition players make add-ons.",
-	"license": "MIT",
+	"license": "LGPL-3.0-or-later",
 	"scripts": {
 		"start": "electron --trace-deprication ./index.js",
 		"start-no-gpu": "electron ./index.js --disable-gpu",
