--- a/package.json
+++ b/package.json
@@ -6,31 +6,23 @@
 	"license": "LGPL-3.0-or-later",
 	"scripts": {
 		"start": "electron .",
-		"start-no-gpu": "electron . --disable-gpu",
-		"build": "electron-builder",
-		"build_appx": "electron-builder --win appx"
+		"build": "electron-builder"
 	},
 	"dependencies": {
 		"@electron/remote": "^2.0.9",
 		"@sfirew/mc-motd-parser": "^1.1.0",
 		"bytebuffer": "^5.0.1",
 		"discord-rpc": "^4.0.1",
-		"express": "^4.18.2",
 		"prismarine-nbt": "^2.2.1"
 	},
 	"devDependencies": {
 		"electron": "^23.1.3",
-		"electron-builder": "^23.6.0"
+		"electron-builder": "^24.6.3"
 	},
 	"build": {
 		"appId": "com.xkingdark.bedrocktools",
 		"productName": "Bedrock Tools (Beta)",
 		"icon": "build/icon.ico",
-		"appx": {
-			"displayName": "Bedrock Tools (Beta)",
-			"applicationId": "com.xkingdark.bedrocktools",
-			"publisherDisplayName": "xKingDark"
-		},
 		"nsis": {
 			"allowToChangeInstallationDirectory": false,
 			"oneClick": true,
