--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@sfirew/mc-motd-parser": "^1.1.0",
 		"bytebuffer": "^5.0.1",
 		"discord-rpc": "^4.0.1",
+		"highlight.js": "^11.8.0",
+		"jszip": "^3.10.1",
 		"prismarine-nbt": "^2.2.1"
 	},
 	"devDependencies": {
