--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"three": "^0.156.0"
 	},
 	"devDependencies": {
+		"@types/discord-rpc": "^4.0.5",
+		"@types/node": "^20.5.8",
 		"electron": "^23.1.3",
 		"electron-builder": "^24.6.3"
 	},
