--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "LGPL-3.0-or-later",
 	"scripts": {
 		"start": "electron .",
-		"build": "electron-builder"
+		"build": "electron-builder",
+		"typecheck": "tsc -w"
 	},
 	"dependencies": {
 		"@electron/remote": "^2.0.9",
@@ -22,7 +23,8 @@
 		"@types/discord-rpc": "^4.0.5",
 		"@types/node": "^20.5.8",
 		"electron": "^23.1.3",
-		"electron-builder": "^24.6.3"
+		"electron-builder": "^24.6.3",
+		"typescript": "^5.2.2"
 	},
 	"build": {
 		"appId": "com.xkingdark.bedrocktools",
