--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": [ "types/**/*" ],
+  "include": [ "js/**/*", "types/**/*" ],
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
