--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@electron/remote": "^2.0.9",
 		"@sfirew/mc-motd-parser": "^1.1.0",
+		"babylonjs": "^6.20.1",
 		"bytebuffer": "^5.0.1",
 		"discord-rpc": "^4.0.1",
 		"highlight.js": "^11.8.0",
