--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,15 @@
   "include": [ "js/**/*", "types/**/*" ],
   "compilerOptions": {
     "allowJs": true,
-    "checkJs": true,
+    "checkJs": false,
     "module": "CommonJS",
-    "target": "ES2020",
-    "noEmit": true,
+    "target": "es2020",
     "strict": false,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "allowUnreachableCode": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": true,
+    "skipLibCheck": true
   }
 }
