--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
 	"name": "bedrocktools",
-	"author": {
-		"name": "xKingDark"
-	},
+	"author": { "name": "xKingDark" },
 	"version": "0.1.3-beta",
 	"description": "Bedrock Tools is an app created to help Minecraft: Bedrock Edition players make add-ons.",
 	"license": "LGPL-3.0-or-later",
