--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 		"build": "electron-builder",
 		"build_mac": "electron-builder --mac dmg",
 		"build_linux": "electron-builder --linux deb",
-		"publish": "electron-builder --win -p onTagOrDraft",
-		"typecheck": "tsc -w"
+		"publish": "electron-builder --win -p onTagOrDraft"
 	},
 	"dependencies": {
 		"@electron/remote": "^2.0.9",
@@ -36,7 +35,7 @@
 	"devDependencies": {
 		"@types/discord-rpc": "^4.0.5",
 		"@types/node": "^20.5.8",
-		"electron": "^23.1.3",
+		"electron": "^28.1.1",
 		"electron-builder": "^24.6.3",
 		"typescript": "^5.2.2"
 	},
