Fixed the app icon for linux builds

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 				"repo": "Bedrock-Tools"
 			}
 		],
+		"linux": { "icon": "build/icon.icns" },
 		"nsis": {
 			"allowToChangeInstallationDirectory": false,
 			"oneClick": true,
